# lumina2

./: .cspell.json  Cargo.toml  build.rs  clippy.toml
.cargo/: config.toml  mutants.toml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
src/: ctx.rs  main.rs  prelude.rs
src/ast/: mod.rs
src/ast/snapshots/: lumina2__ast__test__expr@add.snap  lumina2__ast__test__expr@add_mul.snap  lumina2__ast__test__expr@assignment.snap  lumina2__ast__test__expr@ident.snap  lumina2__ast__test__expr@int_lit.snap  lumina2__ast__test__expr@un_op.snap  lumina2__ast__test__expr@un_op_add_mul.snap
src/error/: mod.rs
src/error/snapshots/: lumina2__error__test__error__fatal_and_message_error.snap  lumina2__error__test__error__fatal_error.snap  lumina2__error__test__error__message_error.snap  (+1 more)
src/interpreter/: mod.rs  pointer.rs  stack.rs  value.rs
src/ir/: ast.rs  cst.rs  hir.rs  id.rs  ir_macro.rs  lower.rs  mir.rs  mod.rs  pointer.rs  repr.rs  thir.rs  ty.rs  util.rs  value.rs
src/ir/ctx/: mod.rs
src/ir2/: ast.rs  cst.rs  hir.rs  mir.rs  mod.rs  util.rs
src/lex/: lex2.rs  mod.rs  tok.rs
src/llvm/: mod.rs
src/llvm2/: mod.rs
src/lower/: llvm.rs  mod.rs
src/passes/: ast_gen.rs  codegen.rs  cst_gen.rs  hir_gen.rs  mir_gen.rs  mod.rs  thir_gen.rs  tok_gen.rs
src/query/: mod.rs
src/stages/: ast_builder.rs  codegen.rs  hir_builder.rs  mir_builder.rs  mod.rs  parse.rs
src/tir/: mod.rs  ty.rs
src/ty/: constraints.rs  disjoint_union_set.rs  mod.rs  solver.rs
src/util/: bindings.rs  indexed_vec.rs  mod.rs  scopes.rs  string_pool.rs
(+379 files in other folders)
