[package]
name = "lumina2"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
lazy_static = "1.5.0"
mutants = "0.0.4"
thiserror = "2.0.17"

[dev-dependencies]
insta = "1.46.0"
mockall = "0.14.0"
rstest = "0.26.1"

[profile.mutants]
inherits = "test"
debug = "none"
